feat: cipher key update - fond, folder, archive name instead id
